[tool.poetry]
name = "watchdoguin"
version = "0.1.0"
description = ""
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"RPi.GPIO" = "^0.7.0"
pytz = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
